force-app/main/default/objects/Product__c/fields/M_Your_Price_Calculated__c.field-meta.xml
<CustomField>
    <fullName>M_Your_Price_Calculated__c</fullName>
    <description>This field contains the Price you need to pay,after availing discount</description>
    <formula>IF((M_Boat_MSRP_PRICE__c +  M_Trailer_MSRP_PRICE__c)&gt; M_Discount__c  ,(M_Boat_MSRP_PRICE__c +  M_Trailer_MSRP_PRICE__c)  -  M_Discount__c ,(M_Boat_MSRP_PRICE__c +  M_Trailer_MSRP_PRICE__c))</formula>
    <label>Your Price (Calculated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>