force-app/main/default/objects/Product__c/fields/MModel2__c.field-meta.xml
<CustomField>
    <fullName>MModel2__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>M_Manufacturer1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Mondo(MD)</fullName>
            </value>
            <value>
                <fullName>Craz(MG)</fullName>
            </value>
            <value>
                <fullName>Mojo(ME)</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>SER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>