force-app/main/default/objects/Product__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <description>Where a part number may be shared over products (eg. Supra SC400, SC450, SC550) use the product name as the SKU and identify the common part number here</description>
    <label>Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>