force-app/main/default/objects/Product__c/fields/Prep__c.field-meta.xml
<CustomField>
    <fullName>Prep__c</fullName>
    <label>Prep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>