force-app/main/default/objects/Product__c/fields/Product_Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Long_Description__c</fullName>
    <description>Provides a long description about the Product.</description>
    <label>Product Long Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>