force-app/main/default/objects/Product__c/fields/Product_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Product_Manufacturer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup with the available list of Manufacturers available.</description>
    <label>Product Manufacturer</label>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Product Manufacturer</relationshipLabel>
    <relationshipName>Boat_Build_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>