force-app/main/default/objects/Product__c/fields/Product_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Short_Description__c</fullName>
    <description>Specifies a short description of the Product.</description>
    <label>Product Short Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>