force-app/main/default/objects/Product__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select an Item from the available list of Items.</description>
    <label>Product Name</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>