force-app/main/default/objects/Product__c/fields/Quantity_In_Stock__c.field-meta.xml
<CustomField>
    <fullName>Quantity_In_Stock__c</fullName>
    <description>Specifies the Quantity of the Product available in Stock.</description>
    <label>Quantity In Stock</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>