force-app/main/default/objects/Product__c/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <description>Specifies the Price at which the product is to be sold</description>
    <inlineHelpText>Specifies the Price at which the product is to be sold.Goes to Quote.</inlineHelpText>
    <label>Sale Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>