force-app/main/default/objects/Product__c/fields/Trailer_Trade_Over_Allowance_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Trade_Over_Allowance_Calculated__c</fullName>
    <description>Calculated field,by reducing Trailer ACV from Trailer Trade Allowance</description>
    <formula>IF(M_Trailer_Actual_Cost_Value_ACV__c &lt; M_Trailer_Trade_Allowance__c  ,M_Trailer_Trade_Allowance__c  -  M_Trailer_Actual_Cost_Value_ACV__c ,0)</formula>
    <label>Trailer Trade Over Allowance(Calculated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>