force-app/main/default/objects/Product__c/fields/Transmission_Gearbox_SN__c.field-meta.xml
<CustomField>
    <fullName>Transmission_Gearbox_SN__c</fullName>
    <inlineHelpText>Goes To Quote From Boat Builder</inlineHelpText>
    <label>Transmission/Gearbox SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>