force-app/main/default/objects/Product__c/validationRules/Ensure_Valid_Down_Payment_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Valid_Down_Payment_Rule</fullName>
    <active>false</active>
    <description>Down Payment must be a valid number.</description>
    <errorConditionFormula>M_Total_Price_Calculated__c &lt;  M_Down_Payment__c</errorConditionFormula>
    <errorDisplayField>M_Down_Payment__c</errorDisplayField>
    <errorMessage>Values of Down Payment  is too large to calculate Total Amount Financed</errorMessage>
</ValidationRule>