force-app/main/default/objects/Product__c/validationRules/Ensure_Valid_Net_Selling_Price_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Valid_Net_Selling_Price_Rule</fullName>
    <active>false</active>
    <description>Net Selling Price must be a valid number.</description>
    <errorConditionFormula>(M_Trailer_Trade_Allowance__c +  M_Boat_Trade_Allowance__c)  &gt;= M_Your_Price_Calculated__c</errorConditionFormula>
    <errorMessage>Values of Trailer Trade Allowance and Boat Trade Allowance is too large to calculate Net Selling Price.</errorMessage>
</ValidationRule>