force-app/main/default/objects/Product__c/validationRules/Ensure_Valid_Trailer_ACV.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Valid_Trailer_ACV</fullName>
    <active>false</active>
    <description>Trailer ACV must be valid.</description>
    <errorConditionFormula>M_Trailer_Trade_Allowance__c &lt; M_Trailer_Actual_Cost_Value_ACV__c</errorConditionFormula>
    <errorDisplayField>M_Trailer_Actual_Cost_Value_ACV__c</errorDisplayField>
    <errorMessage>Values of Trailer ACV  is too large to calculate Trailer Trade Over Allowance</errorMessage>
</ValidationRule>