force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quantity_In_Stock__c</columns>
    <columns>Product_Manufacturer__c</columns>
    <columns>Part_Number__c</columns>
    <columns>MModel2__c</columns>
    <columns>M_Model_Variant__c</columns>
    <columns>M_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Manufacturer__c</field>
        <operation>equals</operation>
        <value>Harris</value>
    </filters>
    <label>All</label>
</ListView>