force-app/main/default/objects/Product__c/listViews/Supra_SC400.listView-meta.xml
<ListView>
    <fullName>Supra_SC400</fullName>
    <columns>NAME</columns>
    <columns>Product_Short_Description__c</columns>
    <columns>MSRP__c</columns>
    <filterScope>Everything</filterScope>
    <label>Supra SC400</label>
</ListView>